circle.yml updated

--- a/circle.yml
+++ b/circle.yml
@@ -7,4 +7,6 @@ deployment:
   prod:
     branch: master
     commands:
-      - aws s3 cp /home/ubuntu/gitCircle-CI/public/* s3://amp-circle-ci/amp/ --recursive
+      - mkdir ${CIRCLE_ARTIFACTS}/ampush
+      - cp -R /home/ubuntu/gitCircle-CI/public/ ${CIRCLE_ARTIFACTS}/ampush/
+      - aws s3 cp ${CIRCLE_ARTIFACTS}/ampush/ s3://amp-circle-ci/amp/ --recursive
