circle.yml updated

--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ deployment:
     commands:
       - mkdir ${CIRCLE_ARTIFACTS}/ampush
       - cp -R /home/ubuntu/gitCircle-CI/public/ ${CIRCLE_ARTIFACTS}/ampush/
-      - aws s3 cp ${CIRCLE_ARTIFACTS}/ampush/ s3://amp-circle-ci/amp/ --recursive --include "*" --region ap-south-1
+      - aws s3 cp ${CIRCLE_ARTIFACTS}/ampush/ s3://amp-circle-ci/ampush/ --recursive --include "*" --region ap-south-1
