--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,4 @@ deployment:
       - hugo
       - mkdir ${CIRCLE_ARTIFACTS}/ampush
       - cp -R /home/ubuntu/gitCircle-CI/public/ ${CIRCLE_ARTIFACTS}/ampush/
-      - aws s3 cp ${CIRCLE_ARTIFACTS}/ampush/public/. s3://amp-circle-ci/newamp/ --recursive --include "*" --region ap-south-1
+      - aws s3 cp ${CIRCLE_ARTIFACTS}/ampush/public/. s3://amp-circle-ci/circleAmpush/ --recursive --include "*" --region ap-south-1
